# keeeensy-game-studio

./: .gitignore  README.md  launcher.bat  launcher.pyw  minecraft_all_mods.bat  minecraft_death_marker_mod.bat  minecraft_rpg_mod.bat  minecraft_vanilla.bat  portfolio_gamedev.pptx
3d_maze/: CMakeLists.txt  GDD.md  README.md  build.bat
3d_maze/src/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  Maze.cpp  Maze.h  Player.cpp  Player.h  main.cpp
death_marker_mod/: GDD.md  README.md  build.gradle  settings.gradle
death_marker_mod/src/main/java/com/keeeensy/deathmarker/: DeathMarkerMod.java
death_marker_mod/src/main/resources/: fabric.mod.json
gem_hunter/: .gitignore  GDD.md  README.md  game.py  gem_hunter.spec  main.py
gem_hunter/levels/: level_1.json  level_2.json  level_3.json
minecraft_profiles/: README.md  launch_fabric.ps1  launcher.cs  Запуск Minecraft.bat
minecraft_profiles/all_mods/: run.bat
minecraft_profiles/profiles/death_marker/: run.bat
minecraft_profiles/rpg_levels/: run.bat
minecraft_profiles/vanilla/: run.bat
rpg_levels_mod/: GDD.md  README.md  build.gradle  settings.gradle
rpg_levels_mod/src/client/java/com/keeeensy/rpglevels/: RPGLevelsClient.java
rpg_levels_mod/src/main/java/com/keeeensy/rpglevels/: RPGLevelsMod.java
rpg_levels_mod/src/main/java/com/keeeensy/rpglevels/mixin/: LivingEntityHurtMixin.java
rpg_levels_mod/src/main/resources/: fabric.mod.json  rpg-levels.mixins.json
zombie_survival/: .gitignore  GDD.md  README.md  main.py  zombie_survival.spec
(+2 files in other folders)
